--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="auth2-block">
           <p><b>MUKUL (Maternal Uncle)</b></p>
           
-          <img src="/images/author2.jpeg" alt="author2" width="45%">
+          <img src="/images/author2.jpg" alt="author2" width="45%">
           <p>INTERNET SERVICE PROVIDER</p>
         </div>
         
@@ -240,7 +240,7 @@
 
         <div class="author1-block">
           <p><b>RAJ (Grand Uncle)</b></p>
-          <img src="/images/author1.jpeg" alt="author1" width="45%" title="rounded-image">
+          <img src="/images/author1.jpg" alt="author1" width="45%" title="rounded-image">
           <p>HARDWARE & SOFTWARE SOLUTIONS (Computer Shop)</p>
         </div> 
         </p>
@@ -306,4 +306,5 @@
     });
   </script>
 </body>
+
 </html>
