--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
 
 <div class="auth2-block">
   <p><b>MUKUL (Maternal Uncle)</b></p>
-  <img src="images/author2.jpg" alt="Mukul" width="45%">
+  <img src="author2.jpg" alt="Mukul" width="45%">
   <p>Internet Service Provider</p>
 </div>
 
 <div class="author1-block">
   <p><b>RAJ (Grand Uncle)</b></p>
-  <img src="images/author1.jpg" alt="Raj" width="45%" title="rounded-image">
+  <img src="author1.jpg" alt="Raj" width="45%" title="rounded-image">
   <p>Hardware & Software Solutions (Computer Shop)</p>
 </div>
 
